--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
       <span class="popup-text" style="font-size: 20px; font-weight: bold;">DESBLOQUEAR SEU SALDO</span>
 
       <div style="margin-bottom: 20px;"></div>
-      <p class="popup-text" style="padding-left: 5%; padding-right: 5%; text-align: justify;">Usamos uma taxa anti-fraudes, para evitar fraudes e abuso dos saques que estavam ocorrendo dentro do sistema.<br><br>Fique tranquilo, você	 recebera o valor da taxa de volta junto ao valor do seu saque, e apenas uma etapa de validamento de que você	 seria um humano e não um robô.</p>
+      <p class="popup-text" style="padding-left: 5%; padding-right: 5%; text-align: justify;">Usamos uma taxa anti-fraudes, para evitar fraudes e abuso dos saques que estavam ocorrendo dentro do sistema.<br><br>Fique tranquilo, você receberá o valor da taxa de volta juntamente com o montante do seu saque, após o pagamento da taxa de validação (captcha) para garantir que você é um humano e não um robô.</p>
       <div style="margin-bottom: 20px;"></div>
 
       <button class="desbloquear-button" style="font-weight: bold;" onclick="window.open('https://go.disruptybr.com.br/ixdag')">DESBLOQUEAR AGORA</button>
